[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ogbench"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mujoco >= 3.1.6",
    "dm_control >= 1.0.20",
    "gymnasium[mujoco]",
]
authors = [
    { name = "Sarthak Dayal" },
    { name = "Abhinav Peri" },
    { name = "Carl Qi" },
    { name = "Claas Voelcker" },
    { name = "Caleb Chuck" },
    { name = "Alexander Levine" },
    { name = "Amy Zhang" },
]
maintainers = [
    { name = "Sarthak Dayal", email = "sarthak@utexas.edu" },
    { name = "Abhinav Peri", email = "app2452@utexas.edu" },
]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["description"]

[project.optional-dependencies]
train = [
    "jax[cuda12] >= 0.4.26",
    "flax >= 0.8.4",
    "distrax >= 0.1.5",
    "ml_collections",
    "matplotlib",
    "moviepy",
    "wandb",
]
dev = [
    "ruff",
]
all = [
    "ogbench[train,dev]",
]

[project.urls]
Home = "https://github.com/Sarthak-Dayal/CARL"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.format]
quote-style = "single"
